--- a/design.css
+++ b/design.css
@@ -575,9 +575,10 @@
     flex-basis: 100%; /* اجعل كل صندوق يأخذ العرض كاملاً */
   }
 }
-  /* html{
+   html{
     scroll-behavior: smooth !important;
-  } */
+  } 
+
 
 
 
